Move from old blog

--- a/content/posts/linux-trip/2.md
+++ b/content/posts/linux-trip/2.md
@@ -4,7 +4,7 @@ date = 2024-02-07
 +++
 
 # 第二回，初入KDE虚界间，安装APPS耀目光
-
+2024-02-07
 # 1.基本
 
 ```bash
@@ -110,7 +110,7 @@ COMMANDS TO RUN:
 
 里面的COMMANDS TO RUN给出的命令执行就可以安装显卡驱动。
 
-```basg
+```bash
 pacman -Rs --noconfirm --noprogressbar --nodeps nvidia-dkms nvidia-hook nvidia-utils
 yay -Syu nvidia-390xx-dkms nvidia-390xx-utils nvidia-390xx-settings
 ```
